test/negative/type_create_empty_instance_unsupported/Main.hx
class Example {
	public var value:Int;

	public function new(value:Int) {
		this.value = value;
	}
}

class Main {
	static function main():Void {
		Type.createEmptyInstance(Example);
	}
}
